Selective Visibility pannel fixed and also continue btn problemm

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1037,7 +1037,7 @@ gap:20px;
 
     top:0;
 
-    right:-450px;
+    right:-100%;
 
     width:420px;
 
